--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockattack - Minecraft Server</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <script src="/static/js/script.js" defer></script>
+    <link rel="stylesheet" href="/blockattack/static/css/style.css">
+    <script src="/blockattack/static/js/script.js" defer></script>
 </head>
 <body>
     <header>
