--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">Über uns</a></li>
-                <li><a href="/server">Server Info</a></li>
+                <li><a href="/blockattack">Home</a></li>
+                <li><a href="/blockattack/about.html">Über uns</a></li>
+                <li><a href="blockattack/server.html">Server Info</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,24 @@
         <p>Verbinde dich jetzt: <strong>blockattack.fun</strong></p>
         <p><em>Jetzt die neuesten Features wie das Claimen von Gebieten ausprobieren!</em></p>
     </section>
-
+    <section id="features">
+        <h2>Warum Blockattack?</h2>
+        <div class="card">
+            <img src="/blockattack/image1.jpg" alt="Feature 1">
+            <h3>Gebietsclaiming</h3>
+            <p>Schütze dein Land vor anderen Spielern und baue es aus.</p>
+        </div>
+        <div class="card">
+            <img src="/blockattack/image2.jpg" alt="Feature 2">
+            <h3>PVP-Kämpfe</h3>
+            <p>Tritt in spannenden Kämpfen gegen andere Spieler an!</p>
+        </div>
+        <div class="card">
+            <img src="/blockattack/image3.jpg" alt="Feature 3">
+            <h3>Events</h3>
+            <p>Erlebe regelmäßige Events und spannende Abenteuer.</p>
+        </div>
+    </section>
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
     </footer>
