--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockattack - Minecraft Server</title>
-    <link rel="stylesheet" href="/blockattack/static/css/style.css">
-    <script src="/blockattack/static/js/script.js" defer></script>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script src="/static/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/blockattack">Home</a></li>
-                <li><a href="/blockattack/about.html">Über uns</a></li>
-                <li><a href="blockattack/server.html">Server Info</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">Über uns</a></li>
+                <li><a href="/server.html">Server Info</a></li>
             </ul>
         </nav>
     </header>
@@ -27,17 +27,17 @@
     <section id="features">
         <h2>Warum Blockattack?</h2>
         <div class="card">
-            <img src="/blockattack/image1.jpg" alt="Feature 1">
+            <img src="/image1.jpg" alt="Feature 1">
             <h3>Gebietsclaiming</h3>
             <p>Schütze dein Land vor anderen Spielern und baue es aus.</p>
         </div>
         <div class="card">
-            <img src="/blockattack/image2.jpg" alt="Feature 2">
+            <img src="/image2.jpg" alt="Feature 2">
             <h3>PVP-Kämpfe</h3>
             <p>Tritt in spannenden Kämpfen gegen andere Spieler an!</p>
         </div>
         <div class="card">
-            <img src="/blockattack/image3.jpg" alt="Feature 3">
+            <img src="/image3.jpg" alt="Feature 3">
             <h3>Events</h3>
             <p>Erlebe regelmäßige Events und spannende Abenteuer.</p>
         </div>
