--- a/index.html
+++ b/index.html
@@ -5,7 +5,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockattack - Minecraft Server</title>
     <link rel="stylesheet" href="/static/css/style.css">
-    <script src="/static/js/script.js" defer></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        #features {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .card {
+            text-align: center;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            padding: 10px;
+            width: 200px;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .popup {
+            position: fixed;
+            bottom: -100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: white;
+            width: 90%;
+            max-width: 500px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            animation: slideUp 0.5s forwards;
+            z-index: 1000;
+        }
+
+        .popup h3 {
+            margin-top: 0;
+        }
+
+        .popup .close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 18px;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .popup .close:hover {
+            color: red;
+        }
+
+        @keyframes slideUp {
+            from {
+                bottom: -100%;
+            }
+            to {
+                bottom: 20%;
+            }
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,26 +104,83 @@
         <p>Verbinde dich jetzt: <strong>blockattack.fun</strong></p>
         <p><em>Jetzt die neuesten Features wie das Claimen von Gebieten ausprobieren!</em></p>
     </section>
+
     <section id="features">
         <h2>Warum Blockattack?</h2>
-        <div class="card">
+        <div class="card" id="feature1">
             <img src="/image1.jpg" alt="Feature 1">
             <h3>Gebietsclaiming</h3>
             <p>Schütze dein Land vor anderen Spielern und baue es aus.</p>
         </div>
-        <div class="card">
+        <div class="card" id="feature2">
             <img src="/image2.jpg" alt="Feature 2">
             <h3>PVP-Kämpfe</h3>
             <p>Tritt in spannenden Kämpfen gegen andere Spieler an!</p>
         </div>
-        <div class="card">
+        <div class="card" id="feature3">
             <img src="/image3.jpg" alt="Feature 3">
             <h3>Events</h3>
             <p>Erlebe regelmäßige Events und spannende Abenteuer.</p>
         </div>
     </section>
+
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
     </footer>
+
+    <div class="overlay" id="overlay" style="display: none;"></div>
+    <div class="popup" id="popup" style="display: none;">
+        <button class="close" id="closePopup">&times;</button>
+        <h3 id="popupTitle">Popup-Titel</h3>
+        <p id="popupDescription">Popup-Beschreibung</p>
+    </div>
+
+    <script>
+        const popup = document.getElementById('popup');
+        const overlay = document.getElementById('overlay');
+        const closePopup = document.getElementById('closePopup');
+        const popupTitle = document.getElementById('popupTitle');
+        const popupDescription = document.getElementById('popupDescription');
+
+        const featureData = {
+            feature1: {
+                title: "Gebietsclaiming",
+                description: "Schütze dein Land vor anderen Spielern und baue es aus."
+            },
+            feature2: {
+                title: "PVP-Kämpfe",
+                description: "Tritt in spannenden Kämpfen gegen andere Spieler an!"
+            },
+            feature3: {
+                title: "Events",
+                description: "Erlebe regelmäßige Events und spannende Abenteuer."
+            }
+        };
+
+        document.querySelectorAll('.card').forEach(card => {
+            card.addEventListener('click', () => {
+                const id = card.id;
+                const data = featureData[id];
+
+                if (data) {
+                    popupTitle.textContent = data.title;
+                    popupDescription.textContent = data.description;
+
+                    overlay.style.display = 'block';
+                    popup.style.display = 'block';
+                }
+            });
+        });
+
+        closePopup.addEventListener('click', () => {
+            overlay.style.display = 'none';
+            popup.style.display = 'none';
+        });
+
+        overlay.addEventListener('click', () => {
+            overlay.style.display = 'none';
+            popup.style.display = 'none';
+        });
+    </script>
 </body>
 </html>
