--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                 const featureName = card.getAttribute('data-feature');
                 switch (featureName) {
                     case "Gebietsclaiming":
-                        alert("Feature: Gebietsclaiming\n\nBeschreibung: Schütze dein Land vor anderen Spielern und baue es aus.");
+                        alert("Claime ganz einfach ein Gebiet mit /f claim und baue dein eigenes Land.");
                         break;
                     case "PVP-Kämpfe":
-                        alert("Feature: PVP-Kämpfe\n\nBeschreibung: Tritt in spannenden Kämpfen gegen andere Spieler an!");
+                        alert("Mach Kämpfe gegen andere Spieler des Blockattack Servers!");
                         break;
                     case "Events":
-                        alert("Feature: Events\n\nBeschreibung: Erlebe regelmäßige Events und spannende Abenteuer.");
+                        alert("Beteilige dich bei Events!");
                         break;
                     default:
                         alert("Feature nicht gefunden.");
