--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     </section>
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
+        <br>
+        <a href="/privacy.html" style="display: inline;">Privacy</a><p style="display: inline;">|</p><a href="/terms.html" style="display: inline;">Terms of Service</a>
     </footer>
     <script>
         // Hardcodierte Beschreibungen für jedes Feature
