--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <p>Erlebe regelmäßige Events und spannende Abenteuer.</p>
         </div>
     </section>
+    <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
         <br>
