--- a/index.html
+++ b/index.html
@@ -1,62 +1,20 @@
-<!-- <!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockattack - Minecraft Server</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <script src="/static/js/script.js" defer></script>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">Über uns</a></li>
-                <li><a href="/server.html">Server Info</a></li>
-            </ul>
-        </nav>
-    </header>
+<!--
 
-    <section id="home">
-        <h1>Willkommen auf Blockattack</h1>
-        <p>Der beste Minecraft Server von Dr. Mifo!</p>
-        <p>Verbinde dich jetzt: <strong>blockattack.fun</strong></p>
-        <p><em>Jetzt die neuesten Features wie das Claimen von Gebieten ausprobieren!</em></p>
-    </section>
-    <section id="features">
-        <h2>Warum Blockattack?</h2>
-        <div class="card" data-feature="Gebietsclaiming" data-description="Schütze dein Land vor anderen Spielern und baue es aus.">
-            <img src="/image1.jpg" alt="Feature 1">
-            <h3>Gebietsclaiming</h3>
-            <p>Schütze dein Land vor anderen Spielern und baue es aus.</p>
-        </div>
-        <div class="card" data-feature="PVP-Kämpfe" data-description="Tritt in spannenden Kämpfen gegen andere Spieler an!">
-            <img src="/image2.jpg" alt="Feature 2">
-            <h3>PVP-Kämpfe</h3>
-            <p>Tritt in spannenden Kämpfen gegen andere Spieler an!</p>
-        </div>
-        <div class="card" data-feature="Events" data-description="Erlebe regelmäßige Events und spannende Abenteuer.">
-            <img src="/image3.jpg" alt="Feature 3">
-            <h3>Events</h3>
-            <p>Erlebe regelmäßige Events und spannende Abenteuer.</p>
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
-    </footer>
-    <script>
-        // JavaScript hinzufügen
-        document.querySelectorAll('.card').forEach(card => {
-            card.addEventListener('click', () => {
-                const featureName = card.getAttribute('data-feature');
-                const featureDescription = card.getAttribute('data-description');
-                alert(`Feature: "${featureName}"\n\nBeschreibung: ${featureDescription}`);
-            });
-        });
-    </script>
-</body>
-</html>
+
+Copyright 2025 TheErrorExe
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+-->
+
+<!--
+
+This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and will be a Copyright Holder of this Software.
+
 -->
 <!DOCTYPE html>
 <html lang="de">
