--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
             <p>Erlebe regelmäßige Events und spannende Abenteuer.</p>
         </div>
     </section>
+    <section id="home">
+        <br>
     <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+        <br>
+        <br>
+    </section>
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
         <br>
