--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
         .hidden {
             visibility: hidden;
         }
+        /* Stil für den Bereich über den Owner */
+#about-owner {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.owner-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.owner-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
     </style>
 </head>
 <body>
@@ -84,6 +105,13 @@
         <br>
         <br>
     </section>
+    <section id="about-owner">
+    <h2>Über den Owner: Dr. Mifo</h2>
+    <div class="owner-info">
+        <img src="drmifo.jpg" alt="Dr. Mifo" class="owner-image">
+        <p>Servus, ich stelle mich mal kurz vor und zwar bin ich der Dr.Mifo aka Jayden. Meine Hobbys/was ich gerne mache sind Youtube Videos drehen, Jugendfeuerwehr(JFW),Fahrrad fahren ,Mit Freunden irgend was unternehmen und noch vieles mehr. Mein Größter Wunsch auf Youtube ist irgendwann mal die 1 Mio. Abos zu schaffen. Ich aktzeptiere alle die auf meinen Kanal sind bzw. im Chat sind. Wenn ihr mir helfen wollt mein Traum zu Verwirklichen dann lasst gerne ein Abo da: @DrMifo</p>
+    </div>
+</section>
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
         <br>
