--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
         <p>Servus, ich stelle mich mal kurz vor und zwar bin ich der Dr.Mifo aka Jayden. Meine Hobbys/was ich gerne mache sind Youtube Videos drehen, Jugendfeuerwehr(JFW),Fahrrad fahren ,Mit Freunden irgend was unternehmen und noch vieles mehr. Mein Größter Wunsch auf Youtube ist irgendwann mal die 1 Mio. Abos zu schaffen. Ich aktzeptiere alle die auf meinen Kanal sind bzw. im Chat sind. Wenn ihr mir helfen wollt mein Traum zu Verwirklichen dann lasst gerne ein Abo da: @DrMifo</p>
         <br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
-</section>
+                <br><br><br><br><br><br><br><br><br><br><br><br>
+
+</section>        <br><br><br><br><br><br><br><br><br><br><br><br>
+
     <footer>
         <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe</p>
         <br>
