--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
     <p id="motd" style="display:none;"></p>
 </section>
 
-<!-- Online Spieler Sektion -->
+<!-- Online Spieler Sektion 
 <section id="online-players" style="display:none;">
     <h2>Online Spieler</h2>
     <div id="players-list"></div>
 </section>
-
+-->
 <script>
     // Minecraft Server Adresse
     const serverAddress = 'blockattack.fun'; // Ändere dies auf deine Serveradresse
