--- a/server.html
+++ b/server.html
@@ -25,15 +25,21 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">Über uns</a></li>
-                <li><a href="/server">Server Info</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="/" style="display: flex; align-items: center; text-decoration: none;">
+                    <img src="/favicon.png" alt="Blockattack Logo" style="width: 32px; height: 32px; margin-right: 8px;">
+                    <span style="font-size: 1.5rem; font-weight: bold; color: #333;">Blockattack</span>
+                </a>
+            </li>
+            <li><a href="/about.html">Über uns</a></li>
+            <li><a href="/server.html">Server Info</a></li>
+        </ul>
+    </nav>
+</header>
+
 
     <section id="server">
         <h2>Server Info</h2>
