--- a/ankündigungen-debug.html
+++ b/ankündigungen-debug.html
@@ -73,9 +73,9 @@
 </footer>
 <script>
     // API URL
-    const apiUrl = 'https://api.errexe.xyz/blockattack-api/v1/an/';
+    const apiUrl = 'https://api.errexe.xyz/blockattack-api/v1/an/'; // Ersetze dies ggf. mit deinem echten Endpunkt
 
-    // Hilfsfunktion für Zeilenumbrüche
+    // Hilfsfunktion für Zeilenumbrüche und Content-Formatierung
     function formatContent(content) {
         return content
             .replace(/<!enter>/g, '<br>')
