index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <section id="home">
         <br>
         <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-        <a onclick="wegenVery()">Join Discord</a>
+        <a onclick="wegenVery()" style="color: blue; text-decoration: underline;">Trete den Discord bei</a> <!-- Nerve niemals einen Programmierer, @Very -->
         <br>
         <br>
     </section>
