--- a/team.html
+++ b/team.html
@@ -53,6 +53,13 @@
             text-align: center;
             margin-top: 50px;
         }
+
+        /* Flexbox für die Team-Mitglieder */
+        #team-members {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     </style>
 </head>
 <body>
@@ -83,7 +90,7 @@
             </div>
             <div class="team-member">
                 <img src="/very.jpg" alt="VeryUmbrella">
-                <h3>VeryUmbrealla</h3></h3>
+                <h3>VeryUmbrella</h3>
                 <p>Leitung</p>
                 <p>Aktuelle Leitung des Servers (alte Leitung war gmrrh).</p>
             </div>
@@ -92,14 +99,14 @@
                 <h3>Danino</h3>
                 <p>Moderator</p>
                 <p>Ein Moderator.</p>
-            </br>
-                <div class="team-member">
+            </div>
+            <div class="team-member">
                 <img src="/kraftwerk.jpg" alt="Kraftwerk">
                 <h3>AtomKraftwerk42</h3>
                 <p>Supporter</p>
                 <p>Ein Supporter.</p>
             </div>
-              <div class="team-member">
+            <div class="team-member">
                 <img src="/whitecrafter.jpg" alt="Whitecrafter44">
                 <h3>Whitecraft44</h3>
                 <p>Supporter</p>
