--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
 </section>
 
 <section id="home">
-    <h2>Lerne das Team kennen (Noch in Development)</h2>
+    <h2>Lerne das Team kennen</h2>
     <a href="/team.html" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">Lerne das Team kennen</a>
 </section>
 
